--- a/Project_2__(9_12_2024).ipynb
+++ b/Project_2__(9_12_2024).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPSIKBplXpvBT4dbbEaRKdr",
+      "authorship_tag": "ABX9TyNKBCzchCHYBmz2U4gPyPxa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1607,7 +1607,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**TASK-1**"
+        "# **TASK-1**"
       ],
       "metadata": {
         "id": "1eRRc-tkQX1S"
@@ -1766,7 +1766,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**TASK-2**\n"
+        "# **TASK-2**\n"
       ],
       "metadata": {
         "id": "_JyOEtxuQmPx"
@@ -2515,7 +2515,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**TASK-3**"
+        "# **TASK-3**"
       ],
       "metadata": {
         "id": "28NoIqGKQuUo"
@@ -3221,7 +3221,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**TASK-4**"
+        "# **TASK-4**"
       ],
       "metadata": {
         "id": "FrRyJ--kQxbo"
@@ -3296,7 +3296,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**TASK-5**"
+        "# **TASK-5**"
       ],
       "metadata": {
         "id": "wMOxxogkQ07Q"
@@ -3424,7 +3424,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**TASK-6**"
+        "# **TASK-6**"
       ],
       "metadata": {
         "id": "_bavUXLjQ3i5"
@@ -3495,7 +3495,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**TASK-7**"
+        "# **TASK-7**"
       ],
       "metadata": {
         "id": "tX_duhh7Q6KI"
@@ -3553,7 +3553,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**TASK-8**"
+        "# **TASK-8**"
       ],
       "metadata": {
         "id": "q36fBc5YQ9qQ"
@@ -3618,7 +3618,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**TASK-9**"
+        "# **TASK-9**"
       ],
       "metadata": {
         "id": "nY_sDu64RAao"
@@ -3677,7 +3677,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**TASK-10**"
+        "# **TASK-10**"
       ],
       "metadata": {
         "id": "o_9QmJD4RDrg"
@@ -3738,7 +3738,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**TASK-11**"
+        "# **TASK-11**"
       ],
       "metadata": {
         "id": "6AfsUCwhRGhJ"
@@ -3798,7 +3798,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**TASK-12**"
+        "# **TASK-12**"
       ],
       "metadata": {
         "id": "TsyYb8hDRJfA"
@@ -3862,7 +3862,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**TASK-13**"
+        "# **TASK-13**"
       ],
       "metadata": {
         "id": "vNxLnVfpRMX4"
@@ -3917,7 +3917,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**TASK-14**"
+        "# **TASK-14**"
       ],
       "metadata": {
         "id": "ORVOwZWPRPWA"
@@ -3977,7 +3977,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**TASK-15**"
+        "# **TASK-15**"
       ],
       "metadata": {
         "id": "Q5e1tFyzRTW3"
@@ -4033,7 +4033,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**TASK-17**"
+        "# **TASK-17**"
       ],
       "metadata": {
         "id": "e-MoZy6hRWa3"
@@ -4091,7 +4091,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**TASK-18**"
+        "# **TASK-18**"
       ],
       "metadata": {
         "id": "lr_VeOJ3RY_Q"
@@ -4150,7 +4150,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**TASK-19**"
+        "# **TASK-19**"
       ],
       "metadata": {
         "id": "tiycruemQM2Q"
