--- a/Drop&Index(True_False)__(11_12_2024).ipynb
+++ b/Drop&Index(True_False)__(11_12_2024).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNjh8AEmY4AMbNvu8cthlFA",
+      "authorship_tag": "ABX9TyN4M7t+to5zY65/Crmkaop4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -575,7 +575,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# **Task-1**"
+      ],
+      "metadata": {
+        "id": "pksGR7rUg2Ha"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# **What does drop mean?**\n",
+        "**The drop method in pandas is used to remove unwanted data from a DataFrame or Series**.\n",
         "## **drop=True:**\n",
         "\n",
         "The current index is completely discarded and not added as a column in the resulting DataFrame.\n",
@@ -610,7 +620,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **drop=True\tRemoves the current index entirely and creates a new default integer index.**"
+        " #\t**drop=True**: **The index is completely removed and not added as a column in the DataFrame**"
       ],
       "metadata": {
         "id": "TxnVRwbnS4-G"
@@ -1139,7 +1149,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **drop=False\tRetains the current index as a new column in the DataFrame, while assigning a new integer index.**"
+        "# **drop=False: The index is reset but kept as a regular column in the DataFrame.**"
       ],
       "metadata": {
         "id": "sLupwc_WS8JG"
