--- a/Drop&Index(True_False)__(11_12_2024).ipynb
+++ b/Drop&Index(True_False)__(11_12_2024).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPmrZ+2T8zJXT+4ZjCj9SeT",
+      "authorship_tag": "ABX9TyOJgZHcCWvvcf+IAc334nxs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1724,6 +1724,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "▶# **index=False: Does not save the index as a column in the CSV file**"
+      ],
+      "metadata": {
+        "id": "jpkQIPngi9NR"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "data1=pd.read_csv(\"/content/123.csv\")\n",
@@ -2249,6 +2258,15 @@
       ],
       "metadata": {
         "id": "DcLZ41huaZ-s"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "▶# **index=True: Saves the index as a column in the CSV file.**"
+      ],
+      "metadata": {
+        "id": "LGB5D0LBjD62"
       }
     },
     {
