--- a/Soma_Retail_Sales_Dataset_(10_12_2024).ipynb
+++ b/Soma_Retail_Sales_Dataset_(10_12_2024).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOvr/inQPqgeuxy8AVUyTF7",
+      "authorship_tag": "ABX9TyPKxKz7fGyqgciA0l1+dUB4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "WNSzzJRVyvxm"
       },
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "ln2U4Jdiy40p"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "7euYjXiQy8jp"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
         "id": "vgsTkuCd2Auu",
         "outputId": "0a85a52a-db6d-4654-8500-9555c4442f04"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -591,7 +591,7 @@
         "id": "fkkyQ70U3TX9",
         "outputId": "0a4627b3-5673-4072-80dc-3cd94eb42817"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -653,7 +653,7 @@
         "id": "i5ZcDfft4B1U",
         "outputId": "e6befb92-2d85-4465-a5eb-97355e189165"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1096,7 +1096,7 @@
         "id": "bTomLRa04QWE",
         "outputId": "bc75d65c-3503-4065-93c0-fd7581b0f2ab"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1222,7 +1222,7 @@
         "id": "20kKNY3S4TKb",
         "outputId": "b7ff7b9f-5727-4d61-96bb-f6adf58ddc29"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1368,7 +1368,7 @@
         "id": "t3McIHmW7vMo",
         "outputId": "214ab31a-a17a-4ec4-c949-a6d7ecddcbc6"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1463,7 +1463,7 @@
         "id": "Wg-ww13d78Hg",
         "outputId": "68bae5dc-f4f7-4406-8352-1b69fa82bb31"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1538,7 +1538,7 @@
         "id": "qqs5T7Fo8-mf",
         "outputId": "8921ccf0-2725-4edc-f2c7-9c9825411ac5"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1573,7 +1573,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **### Cleaned Dataset Summary**:  \n",
+        "# ***Cleaned Dataset Summary:***\n",
         "- The dataset has **1,000 rows and 9 columns**.  \n",
         "- No **missing values** or **duplicates** were found.  \n",
         "- All columns, like `Transaction ID`, `Date`, `Customer ID`, `Product Category`, and `Total Amount`, are intact and ready for analysis."
@@ -1585,7 +1585,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **### Explanation of Handling Missing Values and Duplicates**:\n",
+        "## **Explanation of Handling Missing Values and Duplicates:**\n",
         "\n",
         "1. **Missing Values**:  \n",
         "   - The dataset contains no missing values, so no imputation or removal was required.\n",
@@ -1667,7 +1667,7 @@
         "id": "1qgCDsMj_vgk",
         "outputId": "eb9512db-1690-4c0a-ff2b-a1cda0a8773b"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1725,7 +1725,7 @@
         "id": "9dJJkTapAu-8",
         "outputId": "5c260f1d-1ff6-4172-cbc7-266b25a9bf4f"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1775,7 +1775,7 @@
         "id": "aepBd9l4Ii_k",
         "outputId": "6cd62862-a5e7-418e-ece1-1665642ff8fa"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1798,7 +1798,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **### Simple Summary of Distribution Plots:**\n",
+        "# ***Simple Summary of Distribution Plots:***\n",
         "\n",
         "Distribution plots help us understand how different data points are spread out. For this dataset, we can plot the distribution of:\n",
         "\n",
@@ -1815,7 +1815,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **### Simple Insights on Top Product Categories and Regions (Based on Dataset):**\n",
+        "# **Simple Insights on Top Product Categories and Regions (Based on Dataset):**\n",
         "\n",
         "1. **Top Product Categories**:\n",
         "   - The dataset shows which product categories are sold the most. Categories with the highest sales are the most popular. For example, if **Electronics** and **Clothing** are top sellers, it means these categories are driving most of the sales.\n",
@@ -1867,7 +1867,7 @@
         "id": "n7mo0fMEKyqC",
         "outputId": "f0e36380-480c-41ee-ec5d-4b7224106bcd"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1948,7 +1948,7 @@
         "id": "EzxxKCq8MrhQ",
         "outputId": "3d55c384-80ec-4cc3-d87d-777cb94e0d4f"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2005,7 +2005,7 @@
         "id": "wM_2o17WNSSf",
         "outputId": "95a2e4c8-9446-4a4b-a295-9ed4b55ed195"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2058,7 +2058,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **### Updated DataFrame with New Columns:**\n",
+        "# **Updated DataFrame with New Columns:**\n",
         "\n",
         "After converting the `Order Date` to a proper date format, we created new columns to better understand the sales over time:\n",
         "\n",
@@ -2077,7 +2077,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **##Sample Rows to Verify Transformations:**\n",
+        "# **Sample Rows to Verify Transformations:**\n",
         "\n",
         "To verify the changes made to the dataset, we can look at a few sample rows. These rows will show the following columns:\n",
         "\n",
@@ -2140,7 +2140,7 @@
         "id": "eIdLR6wQRwab",
         "outputId": "0ffccf57-4a1b-44af-b7ce-6858f0ce04e6"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2214,7 +2214,7 @@
         "id": "Gks4t33LSBmr",
         "outputId": "808d6234-5db6-4e1f-8df6-51847cc724c9"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2286,7 +2286,7 @@
         "id": "vKTJqNubSPpz",
         "outputId": "950061bf-451c-42ec-8af8-b07d5dbcac52"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2326,7 +2326,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **###  Heatmap Visualization:**\n",
+        "# ***  Heatmap Visualization:***\n",
         "\n",
         "A **heatmap** is a chart that shows how different numerical features in the dataset are related to each other using colors.\n",
         "\n",
@@ -2397,7 +2397,7 @@
         "id": "_pAzs1O_TSpS",
         "outputId": "a38d7df0-5635-4ae5-9d02-97fc28554189"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2482,7 +2482,7 @@
         "id": "0dQXDlyETeUC",
         "outputId": "69de3ea8-6e13-4108-cae0-c457fd9e2d77"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2977,7 +2977,7 @@
         "id": "UwLRNgELTl6K",
         "outputId": "58d506b7-286f-42d1-b234-b651e06f0078"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3030,7 +3030,7 @@
         "id": "7SG-1E3STu6Z",
         "outputId": "2d0203ac-d908-4e8b-ca32-24f73ebaad66"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3065,7 +3065,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# ***### Code and Results for Each Operation:***\n",
+        "# *** Code and Results for Each Operation:***\n",
         "\n",
         "1. **Filter Sales Data by Date**:\n",
         "   - We used `loc` to get sales data for a specific time period.\n",
@@ -3120,7 +3120,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# ***###  Summary of Key Insights from the Retail Sales Analysis***\n",
+        "# ***  Summary of Key Insights from the Retail Sales Analysis***\n",
         "\n",
         "The analysis of the retail sales dataset provided important insights to improve business strategies:\n",
         "\n",
@@ -3145,7 +3145,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#***## Simple Recommendations for Improving Sales***\n",
+        "#*** Simple Recommendations for Improving Sales***\n",
         "1. **Focus on Region A**: Since **Region A** contributes the most to sales, consider increasing marketing efforts or offering promotions in this region to boost sales even further.\n",
         "\n",
         "2. **Promote Popular Categories**: **Electronics** and **Clothing** are the most frequently sold categories. Increase stock, marketing, and discounts in these categories to drive more sales.\n",
@@ -3163,7 +3163,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **### Retail Sales Insights**\n",
+        "# *** Retail Sales Insights***\n",
         "\n",
         "**Data Cleaning**:  \n",
         "- Missing values were imputed, and duplicates were removed.\n",
