--- a/Soma_Advanced_Customer_Churn_Analysis_(10_12_2024).ipynb
+++ b/Soma_Advanced_Customer_Churn_Analysis_(10_12_2024).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6QL5JYNxvjaewxa4zNYhm",
+      "authorship_tag": "ABX9TyNlSEv6L0PocWpAA9CKbd8L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1387,7 +1387,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **### Summary of the Telecom Churn Dataset:**\n",
+        "# *** Summary of the Telecom Churn Dataset:***\n",
         "\n",
         "- **Number of Records**: 200 customers\n",
         "- **Columns**:\n",
@@ -1397,7 +1397,7 @@
         "  - **Total Charges**: Total amount charged over the customer’s tenure.\n",
         "  - **Churn**: Whether the customer left (Yes) or stayed (No).\n",
         "\n",
-        "# **### Key Insights:**\n",
+        "# *** Key Insights: ***\n",
         "\n",
         "1. **Missing Values**: No missing values in any columns.\n",
         "2. **Duplicates**: No duplicate rows.\n",
@@ -1413,7 +1413,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **### Summary of the Updated Dataset After One-Hot Encodin**g:\n",
+        "# *** Summary of the Updated Dataset After One-Hot Encoding:***\n",
         "\n",
         "**Changes Made**:  \n",
         "- One-hot encoding has been applied to the **\"Churn\"** column.  \n",
@@ -1653,7 +1653,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **#  Simple Insights About Churn Factors:**\n",
+        "# ***  Simple Insights About Churn Factors***:\n",
         "\n",
         "1. **Tenure**:  \n",
         "   - Customers who have been with the company for a **shorter time** are more likely to **leave**.\n",
