--- a/Data_Analytics_25_4_2025.ipynb
+++ b/Data_Analytics_25_4_2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOtmLmYBWOyGs4676Iyt1Ad",
+      "authorship_tag": "ABX9TyOYgWHBCZ8UggT+IXJTg1rz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3372,6 +3372,60 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Interpret:**"
+      ],
+      "metadata": {
+        "id": "e8zuMIV-VrzD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Which variables explain car price the most?**\n",
+        "\n",
+        " Ans: Age, KM, HP, and Weight are usually the most important predictors for price."
+      ],
+      "metadata": {
+        "id": "RjC5BkNCVxR6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**How many components capture most variance (like 80%)?**\n",
+        "\n",
+        " around 6–8 principal components explain about 80% of the total variance.\n",
+        "\n",
+        "\n",
+        "**Example:**\n",
+        "\n",
+        "\n",
+        "PC1: captures ~30%\n",
+        "\n",
+        "\n",
+        "PC2: captures ~20%\n",
+        "\n",
+        "\n",
+        "PC3: captures ~12%\n",
+        "\n",
+        "\n",
+        "PC4: captures ~8%\n",
+        "\n",
+        "\n",
+        "PC5: captures ~5%\n",
+        "\n",
+        "\n",
+        "PC6: captures ~4%\n",
+        "\n",
+        "Total = ~79%"
+      ],
+      "metadata": {
+        "id": "H6NraD5bV7-7"
+      }
     }
   ]
 }
