--- a/Data_Analytics_25_4_2025.ipynb
+++ b/Data_Analytics_25_4_2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOYgWHBCZ8UggT+IXJTg1rz",
+      "authorship_tag": "ABX9TyPOAuezDMqHe+LRz3qgsJXI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3425,6 +3425,398 @@
       ],
       "metadata": {
         "id": "H6NraD5bV7-7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Part-3**"
+      ],
+      "metadata": {
+        "id": "_WVk-Gy0KRTF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Define the 6 Points**\n"
+      ],
+      "metadata": {
+        "id": "8gyrbIldKY7z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "points = [(0, 0), (8, 0), (16, 0), (24, 0), (32, 0), (40, 0)]\n"
+      ],
+      "metadata": {
+        "id": "vjMCWo2aK8cr"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Find all starting centroid configurations.**"
+      ],
+      "metadata": {
+        "id": "yO6yWgBhLXcz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Since we are using K = 3,\n",
+        "\n",
+        "we want to choose 3 points as starting centroids.\n",
+        "\n",
+        "\n",
+        "We will select 3 points from 6, without replacement:\n",
+        "\n",
+        "\n",
+        "Total combinations = C(6, 3) = 20 starting configurations."
+      ],
+      "metadata": {
+        "id": "wGN-OJKGLe3T"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from itertools import combinations\n",
+        "\n",
+        "initial_centroids = list(combinations(points, 3))\n",
+        "print(\"Total initial centroid configurations:\", len(initial_centroids))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5qonh0BoLZFb",
+        "outputId": "c45f5a5a-b23c-4d01-d1f6-b85796a8c762"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total initial centroid configurations: 20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# prompt: Perform K-means steps manually\n",
+        "\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from itertools import combinations\n",
+        "\n",
+        "# Assuming 'points' is defined as in the provided code\n",
+        "points = [(0, 0), (8, 0), (16, 0), (24, 0), (32, 0), (40, 0)]\n",
+        "\n",
+        "# Find all starting centroid configurations for K = 3\n",
+        "initial_centroids = list(combinations(points, 3))\n",
+        "print(\"Total initial centroid configurations:\", len(initial_centroids))\n",
+        "\n",
+        "# Example: Accessing the first centroid configuration\n",
+        "first_configuration = initial_centroids[0]\n",
+        "print(\"First centroid configuration:\", first_configuration)\n",
+        "\n",
+        "\n",
+        "def euclidean_distance(point1, point2):\n",
+        "  return np.sqrt((point1[0] - point2[0])**2 + (point1[1] - point2[1])**2)\n",
+        "\n",
+        "def k_means_step(points, centroids):\n",
+        "  # Assign each point to the nearest centroid\n",
+        "  clusters = [[] for _ in range(len(centroids))]\n",
+        "  for point in points:\n",
+        "    distances = [euclidean_distance(point, centroid) for centroid in centroids]\n",
+        "    cluster_index = np.argmin(distances)\n",
+        "    clusters[cluster_index].append(point)\n",
+        "\n",
+        "  # Calculate new centroids\n",
+        "  new_centroids = []\n",
+        "  for cluster in clusters:\n",
+        "    if not cluster:  # Handle empty clusters\n",
+        "        new_centroids.append(centroids[clusters.index(cluster)]) #keep the same centroid\n",
+        "        continue\n",
+        "    new_centroid = (np.mean([p[0] for p in cluster]), np.mean([p[1] for p in cluster]))\n",
+        "    new_centroids.append(new_centroid)\n",
+        "\n",
+        "  return clusters, new_centroids\n",
+        "\n",
+        "# Example usage with the first centroid configuration\n",
+        "clusters, new_centroids = k_means_step(points, list(first_configuration))\n",
+        "print(\"Initial clusters:\", clusters)\n",
+        "print(\"New centroids:\", new_centroids)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BORWJNl7L3PL",
+        "outputId": "e8193dc0-bca1-4dc6-a85a-29f3c7891d5b"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total initial centroid configurations: 20\n",
+            "First centroid configuration: ((0, 0), (8, 0), (16, 0))\n",
+            "Initial clusters: [[(0, 0)], [(8, 0)], [(16, 0), (24, 0), (32, 0), (40, 0)]]\n",
+            "New centroids: [(np.float64(0.0), np.float64(0.0)), (np.float64(8.0), np.float64(0.0)), (np.float64(28.0), np.float64(0.0))]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# Step 1: Define distance function\n",
+        "def euclidean_distance(point1, point2):\n",
+        "    return np.sqrt((point1[0] - point2[0])**2 + (point1[1] - point2[1])**2)\n",
+        "\n",
+        "# Step 2: One step of k-means (assign + update)\n",
+        "def k_means_step(points, centroids):\n",
+        "    clusters = [[] for _ in centroids]\n",
+        "    for point in points:\n",
+        "        distances = [euclidean_distance(point, centroid) for centroid in centroids]\n",
+        "        cluster_index = np.argmin(distances)\n",
+        "        clusters[cluster_index].append(point)\n",
+        "\n",
+        "    new_centroids = []\n",
+        "    for cluster in clusters:\n",
+        "        if cluster:\n",
+        "            x_mean = np.mean([p[0] for p in cluster])\n",
+        "            y_mean = np.mean([p[1] for p in cluster])\n",
+        "            new_centroids.append((x_mean, y_mean))\n",
+        "        else:\n",
+        "            new_centroids.append((0,0))  # default if cluster is empty\n",
+        "\n",
+        "    return clusters, new_centroids\n",
+        "\n",
+        "# Step 3: Run full k-means until stable\n",
+        "points = [(0,0), (8,0), (16,0), (0,6), (8,6), (16,6)]\n",
+        "initial_centroids = [(0,0), (8,0), (16,0)]  # can choose any 3 points\n",
+        "\n",
+        "centroids = initial_centroids\n",
+        "for iteration in range(10):\n",
+        "    print(f\"\\n--- Iteration {iteration+1} ---\")\n",
+        "    clusters, new_centroids = k_means_step(points, centroids)\n",
+        "\n",
+        "    for i, cluster in enumerate(clusters):\n",
+        "        print(f\"Cluster {i+1}: {cluster}\")\n",
+        "    print(\"New Centroids:\", new_centroids)\n",
+        "\n",
+        "    if centroids == new_centroids:\n",
+        "        print(\"Converged!\")\n",
+        "        break\n",
+        "    centroids = new_centroids\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vNwhczsGL-fj",
+        "outputId": "ed64e7ac-4acc-4423-dce8-3ec0e589fea3"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "--- Iteration 1 ---\n",
+            "Cluster 1: [(0, 0), (0, 6)]\n",
+            "Cluster 2: [(8, 0), (8, 6)]\n",
+            "Cluster 3: [(16, 0), (16, 6)]\n",
+            "New Centroids: [(np.float64(0.0), np.float64(3.0)), (np.float64(8.0), np.float64(3.0)), (np.float64(16.0), np.float64(3.0))]\n",
+            "\n",
+            "--- Iteration 2 ---\n",
+            "Cluster 1: [(0, 0), (0, 6)]\n",
+            "Cluster 2: [(8, 0), (8, 6)]\n",
+            "Cluster 3: [(16, 0), (16, 6)]\n",
+            "New Centroids: [(np.float64(0.0), np.float64(3.0)), (np.float64(8.0), np.float64(3.0)), (np.float64(16.0), np.float64(3.0))]\n",
+            "Converged!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# Define 6 points\n",
+        "points = [(0,0), (8,0), (16,0), (0,6), (8,6), (16,6)]\n",
+        "\n",
+        "# Example clusters (manually created or from k-means step)\n",
+        "clusters = [\n",
+        "    [(0,0), (0,6)],         # Cluster 1\n",
+        "    [(8,0), (8,6)],         # Cluster 2\n",
+        "    [(16,0), (16,6)]        # Cluster 3\n",
+        "]\n",
+        "\n",
+        "# Dummy centroids for handling empty clusters (if any)\n",
+        "centroids = [(0,0), (8,0), (16,0)]  # Same length as clusters\n",
+        "\n",
+        "# Function to recalculate centroids\n",
+        "def recalculate_centroids(clusters):\n",
+        "    new_centroids = []\n",
+        "    for cluster in clusters:\n",
+        "        if not cluster:\n",
+        "            new_centroids.append(centroids[clusters.index(cluster)])\n",
+        "            continue\n",
+        "        new_centroid = (np.mean([p[0] for p in cluster]), np.mean([p[1] for p in cluster]))\n",
+        "        new_centroids.append(new_centroid)\n",
+        "    return new_centroids\n",
+        "\n",
+        "# Call the function and print result\n",
+        "new_centroids = recalculate_centroids(clusters)\n",
+        "print(\"New centroids:\", new_centroids)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4MU_0mphMmTa",
+        "outputId": "53ef1a29-651a-4e50-ea6a-f91696ee62ac"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "New centroids: [(np.float64(0.0), np.float64(3.0)), (np.float64(8.0), np.float64(3.0)), (np.float64(16.0), np.float64(3.0))]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# prompt: Repeat until stable partition\n",
+        "\n",
+        "import numpy as np\n",
+        "def euclidean_distance(point1, point2):\n",
+        "    return np.sqrt((point1[0] - point2[0])**2 + (point1[1] - point2[1])**2)\n",
+        "\n",
+        "def k_means_step(points, centroids):\n",
+        "    clusters = [[] for _ in centroids]\n",
+        "    for point in points:\n",
+        "        distances = [euclidean_distance(point, centroid) for centroid in centroids]\n",
+        "        cluster_index = np.argmin(distances)\n",
+        "        clusters[cluster_index].append(point)\n",
+        "\n",
+        "    new_centroids = []\n",
+        "    for cluster in clusters:\n",
+        "        if cluster:\n",
+        "            x_mean = np.mean([p[0] for p in cluster])\n",
+        "            y_mean = np.mean([p[1] for p in cluster])\n",
+        "            new_centroids.append((x_mean, y_mean))\n",
+        "        else:\n",
+        "            new_centroids.append((0,0))  # default if cluster is empty\n",
+        "\n",
+        "    return clusters, new_centroids\n",
+        "\n",
+        "# Example usage\n",
+        "points = [(0,0), (8,0), (16,0), (0,6), (8,6), (16,6)]\n",
+        "initial_centroids = [(0,0), (8,0), (16,0)]\n",
+        "\n",
+        "centroids = initial_centroids\n",
+        "for iteration in range(10):\n",
+        "    print(f\"\\n--- Iteration {iteration+1} ---\")\n",
+        "    clusters, new_centroids = k_means_step(points, centroids)\n",
+        "\n",
+        "    for i, cluster in enumerate(clusters):\n",
+        "        print(f\"Cluster {i+1}: {cluster}\")\n",
+        "    print(\"New Centroids:\", new_centroids)\n",
+        "\n",
+        "    if centroids == new_centroids:\n",
+        "        print(\"Converged!\")\n",
+        "        break\n",
+        "    centroids = new_centroids\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vwFgXxinNhey",
+        "outputId": "25a169b6-6023-48d3-8d73-e77550634ae5"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "--- Iteration 1 ---\n",
+            "Cluster 1: [(0, 0), (0, 6)]\n",
+            "Cluster 2: [(8, 0), (8, 6)]\n",
+            "Cluster 3: [(16, 0), (16, 6)]\n",
+            "New Centroids: [(np.float64(0.0), np.float64(3.0)), (np.float64(8.0), np.float64(3.0)), (np.float64(16.0), np.float64(3.0))]\n",
+            "\n",
+            "--- Iteration 2 ---\n",
+            "Cluster 1: [(0, 0), (0, 6)]\n",
+            "Cluster 2: [(8, 0), (8, 6)]\n",
+            "Cluster 3: [(16, 0), (16, 6)]\n",
+            "New Centroids: [(np.float64(0.0), np.float64(3.0)), (np.float64(8.0), np.float64(3.0)), (np.float64(16.0), np.float64(3.0))]\n",
+            "Converged!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **How many stable partitions?**"
+      ],
+      "metadata": {
+        "id": "FX_FbAe4Nqdz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " It took 2 iterations to reach convergence clusters didn't change after that.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "LkwwZmPNNsOR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **How many stable partitions?**"
+      ],
+      "metadata": {
+        "id": "IKA-VCbNOaoS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1 stable partition  final groupings of points didn’t change after iteration 2."
+      ],
+      "metadata": {
+        "id": "OfqBJt5MOe8J"
       }
     }
   ]
